<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/second_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="?attr/colorOnPrimary"
        app:title="Настройки" />

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/cpu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_delay"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/delay_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/delay_seconds"
                    android:textStyle="italic"
                    android:fontFamily="@font/inter_italic"
                    android:inputType="number" />

                <Button
                    android:id="@+id/apply_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>

            <ToggleButton
                android:id="@+id/cpu_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textOn="@string/notify_cpu_on_main"
                android:textOff="@string/notify_cpu_off_main"
                android:textColor="?attr/colorOnBackground"
                android:padding="10dp"
                android:background="@drawable/toggle_button_bg"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center" />

            <ToggleButton
                android:id="@+id/mem_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textOn="@string/notify_mem_on_main"
                android:textOff="@string/notify_mem_off_main"
                android:textColor="?attr/colorOnBackground"
                android:padding="10dp"
                android:background="@drawable/toggle_button_bg"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center" />

            <ToggleButton
                android:id="@+id/disk_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textOn="@string/notify_disk_on_main"
                android:textOff="@string/notify_disk_off_main"
                android:textColor="?attr/colorOnBackground"
                android:padding="10dp"
                android:background="@drawable/toggle_button_bg"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
